z-index corrected

--- a/css/main.css
+++ b/css/main.css
@@ -308,7 +308,7 @@ body::-webkit-scrollbar {
 
 .content{
   position: absolute;
-  z-index: 4;
+  z-index: 1;
   top: 10%;
   left: 50%;
   margin-top: 105px;
@@ -320,6 +320,7 @@ body::-webkit-scrollbar {
 }
 
 .content .logo{
+  z-index: 1;
   height: 180px;
   width: 180px;
 }
@@ -386,7 +387,6 @@ footer p {
   }
 
   .content .logo{
-    z-index: 4;
     height:140px;
     width: 140px;
   }
@@ -421,14 +421,14 @@ footer p {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .menu-wrap .toggler{
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 3;
   cursor: pointer;
   width: 50px;
   height: 50px;
@@ -440,7 +440,7 @@ footer p {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   width: 60px;
   height: 60px;
   padding: 1rem;
@@ -465,7 +465,7 @@ footer p {
 .menu-wrap .hamburger > div:after{
   content: '';
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   top: -10px;
   width: 100%;
   height: 2px;
@@ -490,7 +490,6 @@ footer p {
 } 
 
 .menu-wrap .toggler:checked ~ .menu{
-  /* z-index: 1; */
   visibility: visible;
 }
 
@@ -528,7 +527,6 @@ footer p {
   justify-content: center;
   transition: scale(0);
   transition: all 0.4s ease;
-  z-index: 0;
 }
 
 .menu-wrap .menu > div > div {
